mycity location project

--- a/css-site-replication/starter-code/index.html
+++ b/css-site-replication/starter-code/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
+
 <body>
+  <header>
+
+  </header>
   Instagram
+
+
 
   Capture and Share the World's Moments
 
